Sun Apr 13 18:07:50 1997  Ian Lance Taylor  <ian@cygnus.com>

	* rcs.c (RCS_checkout): Add pfn and callerdat parameters.  Change
	all callers.  Move setting of expand after retrieval of file
	data.
	(struct cmp_file_data): Define.
	(RCS_cmp_file): New function.
	(cmp_file_buffer): New static function.
	* rcs.h (RCSCHECKOUTPROC): Define type.
	(RCS_checkout): Update declaration.
	(RCS_cmp_file): Define.
	* diff.c (diff_file_nodiff): Call RCS_cmp_file rather than
	RCS_checkout and xcmp.
	* import.c (update_rcs_file): Likewise.
	* no_diff.c (No_Difference): Likewise.
	* update.c (struct patch_file_data): Define.
	(patch_file): Just return if noexec, or if binary file.  Pass
	patch_file_write to RCS_checkout.  Don't check for newlines or
	compute checksums here.  Stat RCS file to set modes.
	(patch_file_write): New static function.

	* update.c (patch_file): Checkout directly to file2, rather than
	to finfo->file followed by rename.  Remove check for whether
	result of checkout is readable; that was for an old, obsolete,
	form of death support.

Sun Apr 13 13:16:40 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* checkout.c (build_one_dir): New function.
	(struct dir_to_build): New structure.
	(build_dirs_and_chir): Rewritten to accept a linked list of struct
	dir_to_build rather than the silly string processing we had been
	doing before.
	(checkout_proc): Rewrite code that calls build_dirs_and_chdir
	accordingly.
	* sanity.sh: Enable tests modules3-10 and modules3-11 for local CVS;
	tests for above fix.

	* rcs.h (RCS_CO): Removed; no longer used.

Sun Apr 13 00:04:34 1997  Ian Lance Taylor  <ian@cygnus.com>

	Expand RCS keywords internally; never call co:
	* rcs.h (struct rcsversnode): Add state field.
	* rcs.c (kflags): Move out of RCS_check_kflag, and make file
	static.
	(enum kflag): Define.
	(RCS_reparsercsfile): Always save lock information.  Save state in
	new state field, rather than other field.
	(struct rcs_keyword): Define.